# rpi-temp-checker

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Pipfile  docker-compose.yaml  go.mod  go.sum  main.go  pyproject.toml
.github/workflows/: Codestyle.yaml  build-docker.yaml  codestyle.yaml
rpi_temp_checker/: __init__.py  __main__.py
