[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
dist-name = "rpi-temp-checker"
module = "rpi_temp_checker"
author = "Tert0"
home-page = "https://github.com/Tert0/rpi-temp-checker"
classifiers = [ "License :: OSI Approved :: MIT License", "Framework :: AsyncIO", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: Implementation :: CPython", "Typing :: Typed"]
description-file = "README.md"
requires = [
    "fastapi==0.68.0",
    "uvicorn==0.14.0",
    "aiofiles==0.7.0",
    "aiojobs==0.3.0",
    "async-timeout==3.0.1",
]

[tool.flit.metadata.requires-extra]
lint = [
    "black",
    "flake8",
    "mypy"
]
